# HotspotIdentificationYCSB

./: .gitignore  CMakeLists.txt  README.md  parse_keystats.py  ycsbc.cc
core/: client.h  core_workload.cc  core_workload.h  timer.h  twitter_trace_generator.h  twitter_trace_workload.cc  twitter_trace_workload.h  utils.h
db/: db_factory.cc  db_factory.h  keystats_db.cc  keystats_db.h
lib/: stl_hashtable.h
modules/: CMakeLists.txt  heat_separator_arc.cc  heat_separator_arc.h  heat_separator_lfu.cc  heat_separator_lirs.cc  heat_separator_lirs.h  heat_separator_lru.cc  heat_separator_lru.h  heat_separator_lru_k.cc  heat_separator_s3_fifo.cc  heat_separator_s3_fifo.h  heat_separator_sketch_window.cc  heat_separator_sketch_window.h  heat_separator_w_tinylfu.cc  heat_separator_w_tinylfu.cc.bak  separator_config.json  test_separator.cc  twitter_trace_reader.cc  twitter_trace_reader.h
workloads/: keystats.spec  twittertrace.spec  workloadg.spec
ycsb/: CMakeLists.txt  README.md  parse_keystats.py  ycsbc.cc
ycsb/core/: core_workload.cc  db.h
ycsb/db/: db_factory.cc  keystats_db.cc  keystats_db.h  nofdb_db.cc  nofdb_db.h
ycsb/lib/: tbb_rand_hashtable.h  tbb_scan_hashtable.h
ycsb/modules/: heat_separator_heap.cc  heat_separator_heap.h  heat_separator_hotring.cc  heat_separator_hotring.h  heat_separator_lfu.h  heat_separator_lru_k.cc  heat_separator_lru_k.h  heat_separator_sketch.cc  heat_separator_sketch.h  heat_separator_w_tinylfu.h  heat_separator_w_tinylfu.h.bak  heat_separator_window.cc  heat_separator_window.h  separator.h  separator_config.json  test_separator.cc
ycsb/workloads/: keystats.spec  motivation.spec
